gccida/c1/emit_move_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn/src/expr.c:3237:27: error: use of undeclared identifier 'machine_mode'
if ( !memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v3), v3->fld[0].rtx) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn/src/expr.c:3237:42: error: expected expression
if ( !memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v3), v3->fld[0].rtx) 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn/src/expr.c:3238:25: error: use of undeclared identifier 'machine_mode'
&& !push_operand( v3, ( machine_mode)*( ( unsigned __int8 *)v3 + 2)) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn/src/expr.c:3248:27: error: use of undeclared identifier 'machine_mode'
if ( !memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v5), v5->fld[0].rtx) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn/src/expr.c:3248:42: error: expected expression
if ( !memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v5), v5->fld[0].rtx) 
                                         ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn/src/obj/expr.o] Error 1
